style.css
@import url('https://fonts.googleapis.com/css2?family=Sometype+Mono:wght@400;500;600;700&display=swap');

Clearfix Code

.clearfix:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
}
.clearfix { display: inline-block; }
/* start commented backslash hack \*/
* html .clearfix { height: 1%; }
.clearfix { display: block; }
/* close commented backslash hack */

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Sometype Mono', monospace;
}
nav{
  padding: 0 70px;
  display: flex;
  justify-content: space-between;
  font-size: 40px;
  align-items: center;
  height: 80px;
  /* -webkit-box-shadow: 0px 13px 44px -4px rgba(0,0,0,0.69);
  -moz-box-shadow: 0px 13px 44px -4px rgba(0,0,0,0.69);
  box-shadow: 0px 13px 44px -4px rgba(0,0,0,0.69); */
}
nav a{
  text-decoration: none;
  font-weight: 700;
  color: black;
}
nav a span{
  color: rgb(255, 187, 0);
}
nav ul{
  display: flex;

}
nav ul li{
  list-style: none;
  font-size: 20px;
  font-weight: 100px;
  margin-right: 30px;
  cursor: pointer;
}
/* nav .links li a:not(:last-child){
  margin-right: 20px;
} */
.buttons{
  display: flex;
  justify-content: space-around;

}

button{
  border-style: none;
  cursor: pointer;
  border-radius: 10px;
}
.buttons button:not(:last-child){
  margin-right: 15px;
}
.signin{
  background-color: black;
  color: white;
  padding: 10px 20px;

}
.signup{
  border: 1px solid black;
  padding: 10px 20px;
}
.toggle-btn {
  display: none;
}

/* header-section */

.main-content{
  height: 100vh;
  background-image: url('https://assets.nicepagecdn.com/d2cc3eaa/73962/images/archirect-male-workers-gather-together-workplace-surrounded-with-modern-5667.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: flex-end;

}
.main-content-box{
  width: 40%;
  height: 100%;
  right: 0;
}
.box-one{
  width: 351px;
  height: 340px;
  background-color: rgba(255, 187, 0, 0.925);
  border-radius: 10px;
  /* position: absolute; */
  z-index: 0;
  top: 200px;
  margin-top: 120px;
  margin-left: 100px;
  /* right: 125px; */
}
.box-two{
  width: 351px;
  height: 340px;
  background-color: rgb(248, 248, 236);
  border-radius: 10px;
  position: absolute;
  z-index: 1;
  /* margin-top: 180px; */
  top: 250px;
  padding: 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
}
.box-two h1{
  font-weight: bolder;
  font-size: 40px;
  color: rgb(41, 6, 97);
}
.box-two button{
  background-color: blueviolet;
  color: white;
  padding: 16px 30px;
  border-radius: 50px;
  font-weight: 700;
  font-size: 20px;
}
.sub-content{
  width: 100%;
  height: auto;
  background-color: #2b253c;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px 45px;
}
.sub-content p, .main-text{
  text-align: center;
  margin-top: 25px;
  color: aliceblue;
  line-height: 30px;
}
.sub-content .cards{
  height: auto;
  width: 90%;
  background-color: transparent;
  margin: 50px auto;
  display: flex;
  justify-content: space-between;
  border-radius: 15px;
}
.card-one, .card-two, .card-three{
  flex: 1;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 20px 20px;
  margin-right: 10px;
  background-color: aliceblue;

}
/* .cards .card-three{
  margin-right: 0;
} */

.cards .image{
  width: 100%;
  height: 50%;
  border-radius: 15px;
  overflow: hidden;
  margin-bottom: 20px;
  
}
.cards .image img{
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.cards .text{
  color: black;
}

/* form-section */
.form-section{
  height: 120vh;
  width: 100%;
  background-image: linear-gradient(173deg, rgba(56, 42, 78, 0.631) 0%, rgba(2,3,33,0.7259278711484594) 70%), url('https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/e10b49165d2c5fe1ab8b208f/klklu8-min.jpg');
  display: flex;
  color: aliceblue;
  background-size: cover;

  
}
.form-section .left-slider, .form-section .right-slider{
  
  height: 100%;
  width: 50%;
  

}

/* left-slider */
.left-slider{
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
  padding: 50px 100px;
}
.bx{
  font-size: 40px;
  margin-right: 5px;
}
.form-section p{
  margin-top: 15px;
  font-weight: 400px;
  
}
.bxs-phone-call, .bxs-location-plus, .bxs-time{
  color: rgb(255, 208, 0);
}
.left-slider h1{
  font-size: 50px;
}

/* right-slider */
.name-email{
  display: flex;

}
.right-slider{
  display: flex;
  align-items: center;
}
form{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 60%;
  width: 80%;
}
form h4{
  font-size: 20px;
}
.name-email{
  display: flex;
  justify-content: space-between;
}

input{
  height: 50px;
  width: 250px;
  padding: 0 10px;
  margin-top: 10px;
  /* border: none; */
}
input:focus{
  outline: none;
}
.address-box{
  width: 100%;
}
.message-box{
  width: 100%;
  padding-bottom: 80px;
  padding-top: 20px;
}
form button{
  background-color: rgb(255, 230, 0);
  padding: 15px 0;
  font-size: 20px;
  border-radius: 50px;
  font-weight: 900;

}
form button:hover{
  background-color: antiquewhite;
}
textarea{
  height: 100px;
  width: 100%;
  padding: 12px 12px;
  margin-top: 10px;
}

/* footer */
footer{
  width: 100%;
  height: 70vh;
  background-color: rgb(43, 37, 60);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding-top: 40px;
}
footer a{
  text-decoration: none;
  font-weight: 700;
  color: black;
  font-size: 30px;
}
footer a span{
  color: rgb(255, 187, 0);
}
.social-media{
  display: flex;
  justify-content: center;
}
.social-media a{
  color: antiquewhite;
}
.line{
  width: 80%;
  border-bottom: 1px solid antiquewhite;
}
.footer-text p{
  text-align: center;
  color: antiquewhite;
}
.copyrights{
  background-color: gray;
  color: white;
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: center;
  padding: 10px;
}
.copyrights bxl-xing{
  width: 3px;
  height: 3px;
}

/* media query */

/* mobile */
@media (max-width: 425px) {
  
  nav{
    height: 120px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding: 0 20px;
  }
  .nav-logo{
    font-size: 2rem;
  }
  .links{
    position: absolute;
    top: 125px;
    width: 100%;
    height: 30vh;
    z-index: 1000;
    border: 1px solid red;
    right: 0;
    background-color: rgb(255, 196, 0);
    margin: auto;
    border-radius: 20px;
    display: none;
  }
  .links ul{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
  }
  .links ul a{
    padding: 10px 0;
  }
  .links ul li{
    border-bottom: 1px solid black;

  }
  /* .links ul li a{
    padding: 15px 20px;
  } */
  .buttons{
    /* margin-left: 60px; */

  }
  .signin{
    font-size: 1rem;
    padding: 5px 10px;
  }
  .signup{
    font-size: 1rem;
    padding: 5px 10px;
  }
  /* .main-content{
    width: 100%;
    height: 150vh;
    background-position: left;
    background-size: cover;
  }
  .main-content-box {
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    left: 3%;
  }
  .box-one, .box-two{
    

  } */
  .main-content{
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 150vh;
  }
  .box-one{
    width: 302px;
    height: 329px;
    margin-top: 341px;
    margin-left: -166px;
  } 
  .box-two{
    width: 295px;
    height: 299px;
    top: 521px;
    right: 73px
  }
  .sub-content{
    display: flex;
    flex-direction: column;
    height: auto;
    font-size: 0.9rem;
  }
  
  .sub-content .cards{
    /* height: auto;
    width: 90%;
    background-color: transparent;
    margin: 50px auto; */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-radius: 15px;
  }
  .card{
    margin-right: 0;
    margin-bottom: 10px;
  }
  .form-section{
    display: flex;
    flex-direction: column;
    height: 300vh;
  }
  .form-section .left-slider{
    width: 100%;
    height: 110vh;
    padding: 50px;
    line-height: 2rem;
    text-align: left;
    font-size: 0.9rem;
    margin-top: 50px;
    /* display: flex;
    flex-direction: column;
    justify-content: space-around; */
  }
  .form-section .left-slider h1{
    font-size: 1.8rem;
    margin-bottom: 50px;
  }
  .bx{
    font-size: 25px;
  }
  .contact{
    margin-top: 50px;
  }
  .form-section .right-slider{
    padding: 0 50px;
    width: 100%;
  }
  .name-email{
    display: flex;
    flex-direction: column;
  }
  form{
    height: 70%;
    width: 100%;
  }
  form h4{
    font-size: 20px;
  }
}


/* tab */
@media (max-width: 768px) {
  
}

/* laptop */
@media (max-width: 1024px) {
  
}

